[package]
name = "angry-apes"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.10"
bevy_embedded_assets = "0.7"
bevy_mod_aseprite = "0.4"
bevy_prototype_lyon = "0.8"
lyon_tessellation = "1"
rand = "0.8"
rand_distr = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true